feat: implement initial full-stack architecture including JWT authentication, audit services, and dashboard UI components