@@ -1,19 +1,18 @@
 package com.pulse.page.web.security;
 
+import com.pulse.page.web.config.AppProperties;
 import com.pulse.page.web.filter.ApiKeyAuthenticationFilter;
 import com.pulse.page.web.filter.CorrelationIdFilter;
 import com.pulse.page.web.filter.RateLimitFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -23,6 +22,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -35,34 +35,31 @@ public class SecurityConfig {
     private final UserDetailsServiceImpl userDetailsService;
     private final CorrelationIdFilter correlationIdFilter;
     private final RateLimitFilter rateLimitFilter;
-    private final ApiKeyAuthenticationFilter apiKeyAuthenticationFilter;
+    private final AppProperties appProperties;
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) {
+    @SuppressWarnings("java:S4502")
+    public SecurityFilterChain filterChain(HttpSecurity http, ApiKeyAuthenticationFilter apiKeyAuthenticationFilter)
+            throws Exception {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(AbstractHttpConfigurer::disable)
+                .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/h2-console/**").permitAll()
-                        .requestMatchers("/actuator/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/audit/**").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/audit/run").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/audit/stream").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/v1/sitemap/**").permitAll()
-                        .requestMatchers("/api/v1/scheduled-audits/**").permitAll()
-                        .requestMatchers("/api/audit/batch/**").permitAll()
-                        .requestMatchers("/api/v1/competitor-comparison/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/v1/reports/**").hasAnyRole("USER", "ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/v1/reports/**").hasRole("ADMIN")
-                        .anyRequest().authenticated()
-                )
+                        .requestMatchers("/actuator/health", "/actuator/metrics", "/actuator/prometheus").permitAll()
+                        .requestMatchers("/api/audit/**").permitAll()
+                        .requestMatchers("/api/v1/**").permitAll()
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+                        .anyRequest().authenticated())
                 .headers(headers -> headers
                         .frameOptions(frame -> frame.sameOrigin())
-                )
+                        .xssProtection(xss -> {
+                        })
+                        .contentSecurityPolicy(csp -> csp.policyDirectives(
+                                "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';")))
                 .addFilterBefore(correlationIdFilter, UsernamePasswordAuthenticationFilter.class)
                 .addFilterBefore(rateLimitFilter, CorrelationIdFilter.class)
                 .addFilterBefore(apiKeyAuthenticationFilter, RateLimitFilter.class)
@@ -74,16 +71,23 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of(
-                "http://localhost:3000",
-                "http://localhost:5173",
-                "http://127.0.0.1:3000",
-                "http://127.0.0.1:5173"
-        ));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        String allowedOriginsStr = appProperties.getCors() != null ? appProperties.getCors().getAllowedOrigins() : null;
+        List<String> allowedOrigins = allowedOriginsStr != null && !allowedOriginsStr.isBlank()
+                ? Arrays.asList(allowedOriginsStr.split(","))
+                : List.of("http://localhost:3000", "http://localhost:5173", "http://127.0.0.1:3000",
+                        "http://127.0.0.1:5173");
+        config.setAllowedOrigins(allowedOrigins);
+
+        String allowedMethodsStr = appProperties.getCors() != null ? appProperties.getCors().getAllowedMethods() : null;
+        config.setAllowedMethods(allowedMethodsStr != null && !allowedMethodsStr.isBlank()
+                ? Arrays.asList(allowedMethodsStr.split(","))
+                : Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
-        config.setMaxAge(3600L);
+
+        Long maxAge = appProperties.getCors() != null ? appProperties.getCors().getMaxAge() : null;
+        config.setMaxAge(maxAge != null ? maxAge : 3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
@@ -103,7 +107,7 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 }
